base/kubeflow-pipelines-profile-controller-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-pipelines-profile-controller
spec:
  template:
    spec:
      containers:
        - name: profile-controller
