base/set_memory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensorboard-controller-controller-manager
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
      - name: manager
        resources:
          limits:
            memory: 300Mi
          requests:
            memory: 200Mi
