base/training-operator-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-operator
spec:
  template:
    spec:
      containers:
        - name: training-operator
          command:
            - /manager
            - --mpi-kubectl-delivery-image=quay.io/ibm/mpioperator-kubectl-delivery:v0.3.0
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 40
            timeoutSeconds: 6
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 6
          resources:
            limits:
              memory: 300Mi
            requests:
              memory: 200Mi
