base/workflow-controller-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-controller
spec:
  template:
    spec:
      containers:
        - name: workflow-controller
          args:
            - --configmap
            - workflow-controller-configmap
            - --executor-image
            - quay.io/rocketaihub/argoexec:v3.3.10
